libuv: win,process: avoid kernel bug with starting Windows Store apps

Backport upstream libuv commit `93ca3f15` (win,process: avoid kernel bug
with starting Windows Store apps, 2023-09-27) from libuv PR 4152.

Fixes: #23029
Patch-by: Jameson Nash <vtjnash@gmail.com>